# toolz

./: Makefile  README.md  install.sh  out.md  pyproject.toml
src/: cli.py
src/commands/: dump.py
src/commands/dump/: dump.py
