[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.1.0",
    "rich>=13.9.4",
    "typer>=0.13.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tz = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]



[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]


[tool.mypy]
python_version = "3.12"
strict = true
